test/parser/types/generics.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s
struct Wrapper<T>{}

struct Wrapper2<T,>{}

struct Wrapper3<T,U>{}

struct Wrapper<>{}
// CHECK: [[# @LINE - 1 ]]:16: error: expected type parameter declaration

struct Wrapper<{}
// CHECK: [[# @LINE - 1 ]]:16: error: expected type parameter declaration

struct Wrapper<T{}
// CHECK: [[# @LINE - 1 ]]:17: error: expected ',' or '>'

struct Wrapper<T,{}
// CHECK: [[# @LINE - 1 ]]:18: error: expected type parameter declaration

fn wrapper<T>(): unit {}

fn wrapper2<T,>(): unit {}

fn wrapper3<T,U>(): unit {}

fn wrapper<>(): unit {}
// CHECK: [[# @LINE - 1 ]]:12: error: expected type parameter declaration

fn wrapper<(): unit {}
// CHECK: [[# @LINE - 1 ]]:12: error: expected type parameter declaration

fn wrapper<T(): unit {}
// CHECK: [[# @LINE - 1 ]]:13: error: expected ',' or '>'

fn wrapper<T,(): unit {}
// CHECK: [[# @LINE - 1 ]]:14: error: expected type parameter declaration

fn main(): unit {
    Wrapper@{};
    // CHECK: [[# @LINE - 1 ]]:13: error: expected '<'

    Wrapper@<{};
    // CHECK: [[# @LINE - 1 ]]:14: error: expected type specifier

    Wrapper@<number{};
    // CHECK: [[# @LINE - 1 ]]:20: error: expected ',' or '>'

    Wrapper@<number,{};
    // CHECK: [[# @LINE - 1 ]]:21: error: expected type specifier

    Wrapper@<number,>{};

    Wrapper@<number>{};

    wrapper@();
    // CHECK: [[# @LINE - 1 ]]:13: error: expected '<'

    wrapper@<();
    // CHECK: [[# @LINE - 1 ]]:16: error: expected '->'

    wrapper@<number();
    // CHECK: [[# @LINE - 1 ]]:20: error: expected ',' or '>'

    wrapper@<number,();
    // CHECK: [[# @LINE - 1 ]]:23: error: expected '->'

    wrapper@<number,>();

    wrapper@<number>();
}

// CHECK: StructDecl: Wrapper
// CHECK-NEXT:   TypeParamDecl: T
// CHECK-NEXT: StructDecl: Wrapper2
// CHECK-NEXT:   TypeParamDecl: T
// CHECK-NEXT: StructDecl: Wrapper3
// CHECK-NEXT:   TypeParamDecl: T
// CHECK-NEXT:   TypeParamDecl: U
// CHECK-NEXT: FunctionDecl: wrapper
// CHECK-NEXT:   TypeParamDecl: T
// CHECK-NEXT:   BuiltinType: unit
// CHECK-NEXT:   Block
// CHECK-NEXT: FunctionDecl: wrapper2
// CHECK-NEXT:   TypeParamDecl: T
// CHECK-NEXT:   BuiltinType: unit
// CHECK-NEXT:   Block
// CHECK-NEXT: FunctionDecl: wrapper3
// CHECK-NEXT:   TypeParamDecl: T
// CHECK-NEXT:   TypeParamDecl: U
// CHECK-NEXT:   BuiltinType: unit
// CHECK-NEXT:   Block
// CHECK-NEXT: FunctionDecl: main
// CHECK-NEXT:   BuiltinType: unit
// CHECK-NEXT:   Block
// CHECK-NEXT:     StructInstantiationExpr
// CHECK-NEXT:       DeclRefExpr: Wrapper
// CHECK-NEXT:         TypeArgumentList
// CHECK-NEXT:           BuiltinType: number
// CHECK-NEXT:     StructInstantiationExpr
// CHECK-NEXT:       DeclRefExpr: Wrapper
// CHECK-NEXT:         TypeArgumentList
// CHECK-NEXT:           BuiltinType: number
// CHECK-NEXT:     CallExpr:
// CHECK-NEXT:       DeclRefExpr: wrapper
// CHECK-NEXT:         TypeArgumentList
// CHECK-NEXT:           BuiltinType: number
// CHECK-NEXT:     CallExpr:
// CHECK-NEXT:       DeclRefExpr: wrapper
// CHECK-NEXT:         TypeArgumentList
// CHECK-NEXT:           BuiltinType: number
